rgbds-0.6.1/test/asm/block-comment-termination-error.asm
PRINT /* block comments must terminate before EOF